--- a/0x00-Webpack/task_0/package.json
+++ b/0x00-Webpack/task_0/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "dev": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,10 +15,6 @@
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   },
-  "scripts": {
-  "build": "webpack"
-  },
-
   "dependencies": {
     "jquery": "^3.7.1"
   }
