--- a/0x03-React_component/task_0/dashboard/package.json
+++ b/0x03-React_component/task_0/dashboard/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "./node_modules/@types/json-schema/package.json",
   "name": "dashboard",
   "version": "1.0.0",
   "description": "",
